--- a/PopcornApp/app/src/main/res/layout/activity_main.xml
+++ b/PopcornApp/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Submit"
+        android:text="Weird"
         android:id="@+id/button"
         android:onClick="sendMessage"
         android:layout_alignParentBottom="true"
