Nightly Build - More Changes to the Scout Goal Page
Implemented a working progress bar that moves as the amt of product sold
increases.  Had to make a few changes to Lloyd's code in order for me to
be able to build the project however.  Still need confirmation from the
database team as to how data will be transmitted.

--- a/PopcornApp/app/src/main/res/layout/activity_scout_goal.xml
+++ b/PopcornApp/app/src/main/res/layout/activity_scout_goal.xml
@@ -7,4 +7,96 @@
     tools:context="com.mis478.popcornapp.ScoutGoal">
 
 
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="fill_parent">
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Pack Goal:"
+                android:id="@+id/PackGoalLabel"
+                android:layout_gravity="right"
+                android:layout_marginRight="5dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Personal Goal:"
+                android:id="@+id/PersonalGoalLabel"
+                android:layout_gravity="right"
+                android:layout_marginRight="5dp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="$0"
+                android:id="@+id/PackAmt"
+                android:numeric="signed" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="$15"
+                android:id="@+id/PersonalAmt"
+                android:numeric="integer" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_weight="5"
+            android:layout_gravity="center">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Total Sold:"
+                android:id="@+id/TotalSoldAmtLabel"
+                android:layout_gravity="center" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="$5"
+                android:id="@+id/TotalSoldAmt"
+                android:layout_gravity="center" />
+        </LinearLayout>
+
+    </TableRow>
+
+    <TableRow
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_weight="2"></TableRow>
+
+    <ProgressBar
+        style="@android:style/Widget.ProgressBar.Horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/SaleProgressBar"
+        android:minHeight="50dp"
+        android:progress="50"
+        android:layout_gravity="bottom"
+        android:layout_marginTop="50dp" />
 </TableLayout>
