--- a/PopcornApp/app/src/main/res/layout-xlarge/sample_den_main.xml
+++ b/PopcornApp/app/src/main/res/layout-xlarge/sample_den_main.xml
@@ -1,7 +1,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res/com.mis478.popcornapp"
     android:layout_width="wrap_content" android:layout_height="wrap_content"
-    android:id="@+id/">
+    android:id="@+id/brandonadded2">
 
     <com.mis478.popcornapp.DenMain android:background="#ccc" android:layout_width="300dp"
         android:layout_height="300dp" android:paddingLeft="20dp" android:paddingBottom="40dp"
