--- a/PopcornApp/app/src/main/res/layout/sample_den_main.xml
+++ b/PopcornApp/app/src/main/res/layout/sample_den_main.xml
@@ -1,7 +1,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res/com.mis478.popcornapp"
+    xmlns:app="http://schemas.android.com/apk/res"
     android:layout_width="wrap_content" android:layout_height="wrap_content"
-    android:id="@+id/"
+    android:id="@+id/brandonadded"
     android:clickable="true">
 
 </FrameLayout>
