--- a/PopcornApp/app/src/main/res/menu/menu_main.xml
+++ b/PopcornApp/app/src/main/res/menu/menu_main.xml
@@ -3,4 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="never" />
+    <item android:id="@+id/scoutGoal" android:title="Scout Goal"
+        android:orderInCategory="101" app:showAsAction="always" />
 </menu>
