--- a/PopcornApp/app/src/main/res/menu/menu_main.xml
+++ b/PopcornApp/app/src/main/res/menu/menu_main.xml
@@ -4,5 +4,9 @@
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="never" />
     <item android:id="@+id/scoutGoal" android:title="Scout Goal"
-        android:orderInCategory="101" app:showAsAction="always" />
+        android:orderInCategory="101" app:showAsAction="never" />
+    <item android:id="@+id/deliveryMode" android:title="Delivery Mode"
+        android:orderInCategory="102" app:showAsAction="never" />
+    <item android:id="@+id/pastSales" android:title="Past Sales"
+        android:orderInCategory="103" app:showAsAction="never" />
 </menu>
