Minor Update w/ Lloyd
Added a few parts of code so Lloyd can get to his screens.

--- a/PopcornApp/app/src/main/res/menu/menu_main.xml
+++ b/PopcornApp/app/src/main/res/menu/menu_main.xml
@@ -9,4 +9,6 @@
         android:orderInCategory="102" app:showAsAction="never" />
     <item android:id="@+id/pastSales" android:title="Past Sales"
         android:orderInCategory="103" app:showAsAction="never" />
+    <item android:id="@+id/denLeaderMain" android:title="Den Leader Main"
+        android:orderInCategory="103" app:showAsAction="never" />
 </menu>
