--- a/PopcornApp/app/src/main/res/layout/activity_main.xml
+++ b/PopcornApp/app/src/main/res/layout/activity_main.xml
@@ -6,38 +6,47 @@
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
     android:id="@+id/sup">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView" />
-
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="textEmailAddress"
+        android:inputType="text"
         android:ems="10"
         android:id="@+id/editText"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:text="Username" />
+        android:text="Username"
+        android:onClick="clrUN" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Weird"
+        android:text="Submit"
         android:id="@+id/button"
         android:onClick="sendMessage"
-        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/editText2"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="152dp" />
+        android:layout_marginTop="53dp" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="textEmailAddress"
+        android:inputType="text"
         android:ems="10"
         android:id="@+id/editText2"
         android:text="Password"
         android:layout_below="@+id/editText"
+        android:layout_centerHorizontal="true"
+        android:onClick="clrPASS"
+        android:password="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Welcome to the Cub Scout App"
+        android:id="@+id/WelcomeBanner"
+        android:layout_marginTop="71dp"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
