--- a/PopcornApp/app/src/main/res/layout/activity_delivery_mode.xml
+++ b/PopcornApp/app/src/main/res/layout/activity_delivery_mode.xml
@@ -1,10 +1,13 @@
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    tools:context="com.mis478.popcornapp.DeliveryMode">
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content" >
 
-    <ExpandableListView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/DeliveryExpandableListView" />
-</TableLayout>
+    <TextView
+        android:id="@+id/label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@+id/label"></TextView>
+    <!--   android:textSize="20px" -->
+
+</LinearLayout> 
