--- a/PopcornApp/app/src/main/res/layout/view_scouts.xml
+++ b/PopcornApp/app/src/main/res/layout/view_scouts.xml
@@ -1,29 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical"
+    android:background="#f4f4f4" >
 
-    <RelativeLayout
-        android:layout_width="match_parent"
+    <ExpandableListView
+        android:id="@+id/lvExp"
         android:layout_height="match_parent"
-        android:layout_gravity="center_horizontal">
+        android:layout_width="match_parent"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="View Scouts"
-            android:id="@+id/textView6"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true" />
-
-        <ListView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/listView"
-            android:layout_below="@+id/textView6"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="79dp" />
-    </RelativeLayout>
 </LinearLayout>
