--- a/PopcornApp/app/src/main/res/layout/customer_info.xml
+++ b/PopcornApp/app/src/main/res/layout/customer_info.xml
@@ -4,11 +4,27 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.mis478.popcornapp.CustomerInfo">
+    tools:context="com.mis478.popcornapp.CustomerInfo"
+    android:id="@+id/">
 
     <TableLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent">
+
+        <TableRow
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="114dp"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Customer Info."
+                android:id="@+id/textView21"
+                android:layout_column="1"
+                android:layout_gravity="center_horizontal|top"
+                android:textSize="@dimen/abc_action_button_min_width_material" />
+        </TableRow>
 
         <TableRow
             android:layout_width="fill_parent"
@@ -153,6 +169,12 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent">
 
+        </TableRow>
+
+        <TableRow
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -170,6 +192,14 @@
                 android:layout_column="1" />
         </TableRow>
 
+        <TableRow
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:orientation="horizontal"
+            android:id="@+id/">
+
+        </TableRow>
+
     </TableLayout>
 
     <Button
@@ -178,13 +208,15 @@
         android:text="@string/back"
         android:id="@+id/BackButton"
         android:layout_column="0"
-        android:layout_gravity="left|bottom" />
+        android:layout_gravity="left|bottom"
+        android:clickable="true" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/next"
         android:id="@+id/NextButton"
-        android:layout_gravity="right|bottom" />
+        android:layout_gravity="right|bottom"
+        android:clickable="true" />
 
 </FrameLayout>
