--- a/PopcornApp/app/src/main/res/layout/customer_info.xml
+++ b/PopcornApp/app/src/main/res/layout/customer_info.xml
@@ -5,7 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.mis478.popcornapp.CustomerInfo"
-    android:id="@+id/">
+    android:id="@+id/brandonadded4">
 
     <TableLayout
         android:layout_width="wrap_content"
@@ -196,7 +196,7 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:orientation="horizontal"
-            android:id="@+id/">
+            android:id="@+id/brandonadded5">
 
         </TableRow>
 
