--- a/PopcornApp/app/src/main/res/layout/view_products.xml
+++ b/PopcornApp/app/src/main/res/layout/view_products.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:weightSum="1">
 
     <TableLayout
         android:layout_width="match_parent"
@@ -20,7 +21,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="647dp"
         android:layout_gravity="center_horizontal">
 
         <ListView
@@ -31,4 +32,21 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
     </RelativeLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="2.26">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/back"
+            android:id="@+id/button9"
+            android:layout_column="0"
+            android:clickable="true"
+            android:layout_gravity="left|center_vertical" />
+
+    </FrameLayout>
 </LinearLayout>
