--- a/PopcornApp/app/src/main/res/layout/den_sales_tracking.xml
+++ b/PopcornApp/app/src/main/res/layout/den_sales_tracking.xml
@@ -66,7 +66,8 @@
             android:text="Den Leader Main Menu"
             android:id="@+id/button4"
             android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:clickable="true" />
     </RelativeLayout>
 
 </LinearLayout>
