--- a/PopcornApp/app/src/main/res/menu/menu_main.xml
+++ b/PopcornApp/app/src/main/res/menu/menu_main.xml
@@ -10,5 +10,7 @@
     <item android:id="@+id/pastSales" android:title="Past Sales"
         android:orderInCategory="103" app:showAsAction="never" />
     <item android:id="@+id/denLeaderMain" android:title="Den Leader Main"
+    android:orderInCategory="103" app:showAsAction="never" />
+    <item android:id="@+id/den_sales_tracking" android:title="Den Sales Tracking"
         android:orderInCategory="103" app:showAsAction="never" />
 </menu>
