--- a/PopcornApp/app/src/main/res/layout/activity_donation.xml
+++ b/PopcornApp/app/src/main/res/layout/activity_donation.xml
@@ -1,17 +1,23 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:weightSum="1">
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:weightSum="1"
+    tools:context="com.mis478.popcornapp.Donation">
 
     <TextView
+        android:id="@+id/textView17"
         android:layout_width="wrap_content"
         android:layout_height="218dp"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Donations"
-        android:id="@+id/textView17"
         android:layout_column="18"
         android:layout_gravity="center_horizontal"
+        android:text="Donations"
+        android:textAppearance="?android:attr/textAppearanceLarge"
         android:textSize="@dimen/abc_action_button_min_width_material" />
 
     <TableLayout
@@ -423,24 +429,24 @@
             android:layout_height="fill_parent">
 
             <TextView
+                android:id="@+id/textView18"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Donation Amount: $"
-                android:id="@+id/textView18"
                 android:layout_column="0"
                 android:layout_gravity="bottom"
+                android:text="Donation Amount: $"
+                android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textSize="@dimen/abc_text_size_display_1_material" />
 
             <EditText
+                android:id="@+id/editText17"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:inputType="number|textPersonName"
-                android:ems="10"
-                android:id="@+id/editText17"
-                android:layout_weight="1"
                 android:layout_column="2"
                 android:layout_gravity="bottom"
+                android:layout_weight="1"
+                android:ems="10"
+                android:inputType="number|textPersonName"
                 android:textSize="@dimen/abc_text_size_display_1_material" />
         </TableRow>
 
@@ -739,12 +745,12 @@
             android:layout_height="fill_parent">
 
             <RadioButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Credit"
                 android:id="@+id/radioButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_column="0"
                 android:checked="false"
+                android:text="Credit"
                 android:textSize="@dimen/abc_text_size_title_material" />
         </TableRow>
 
@@ -753,9 +759,9 @@
             android:layout_height="fill_parent">
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:id="@+id/textView19"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_column="0" />
         </TableRow>
 
@@ -764,12 +770,12 @@
             android:layout_height="fill_parent">
 
             <RadioButton
+                android:id="@+id/radioButton2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Cash"
-                android:id="@+id/radioButton2"
                 android:layout_column="0"
                 android:checked="false"
+                android:text="Cash"
                 android:textSize="@dimen/abc_text_size_title_material" />
         </TableRow>
 
@@ -778,9 +784,9 @@
             android:layout_height="fill_parent">
 
             <TextView
+                android:id="@+id/textView20"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/textView20"
                 android:layout_column="0" />
         </TableRow>
 
@@ -789,11 +795,11 @@
             android:layout_height="fill_parent">
 
             <RadioButton
+                android:id="@+id/radioButton3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Check"
-                android:id="@+id/radioButton3"
                 android:layout_column="0"
+                android:text="Check"
                 android:textSize="@dimen/abc_text_size_title_material" />
         </TableRow>
     </TableLayout>
@@ -803,27 +809,27 @@
         android:layout_height="match_parent">
 
         <Button
+            android:id="@+id/button7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/back"
-            android:id="@+id/button7"
             android:layout_column="0"
             android:layout_gravity="bottom"
-            android:clickable="true" />
+            android:clickable="true"
+            android:text="@string/back" />
 
         <GridLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <Button
+                android:id="@+id/button8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/next"
-                android:id="@+id/button8"
+                android:layout_column="32"
                 android:layout_gravity="right|bottom"
-                android:clickable="true"
                 android:layout_row="29"
-                android:layout_column="32" />
+                android:clickable="true"
+                android:text="@string/next" />
         </GridLayout>
     </TableRow>
 
