--- a/PopcornApp/app/src/main/res/layout/activity_order_finalization.xml
+++ b/PopcornApp/app/src/main/res/layout/activity_order_finalization.xml
@@ -1,9 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
+    tools:context="com.mis478.popcornapp.OrderFinalization"
     android:weightSum="1"
-    android:orientation="vertical">
+    android:orientation="vertical">>
 
     <TableRow
         android:layout_width="match_parent"
