--- a/PopcornApp/app/src/main/res/layout/customer_info.xml
+++ b/PopcornApp/app/src/main/res/layout/customer_info.xml
@@ -9,7 +9,7 @@
 
     <TableLayout
         android:layout_width="wrap_content"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <TableRow
             android:layout_width="fill_parent"
@@ -17,7 +17,7 @@
 
             <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="114dp"
+                android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="Customer Info."
                 android:id="@+id/textView21"
