--- a/PopcornApp/app/src/main/res/layout/customer_info.xml
+++ b/PopcornApp/app/src/main/res/layout/customer_info.xml
@@ -22,22 +22,6 @@
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:id="@+id/textView21"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_column="0"
-                    android:layout_gravity="top|center_horizontal"
-                    android:layout_span="2"
-                    android:text="Customer Info"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textSize="@dimen/abc_action_button_min_width_material" />
-            </TableRow>
-
-            <TableRow
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-
-                <TextView
                     android:id="@+id/FnameLabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -53,7 +37,7 @@
                     android:layout_weight="1"
                     android:ems="10"
                     android:inputType="textPersonName"
-                    android:textColor="@color/cubscouttheme_color"/>
+                    android:textColor="@color/white" />
 
             </TableRow>
 
@@ -66,7 +50,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/lname"
-                    android:textAppearance="?android:attr/textAppearanceLarge" />
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textColor="@color/white" />
 
                 <EditText
                     android:id="@+id/LnameBox"
@@ -75,7 +60,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:ems="10"
-                    android:inputType="textPersonName" />
+                    android:inputType="textPersonName"
+                    android:textColor="@color/white" />
 
             </TableRow>
 
@@ -88,7 +74,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/address"
-                    android:textAppearance="?android:attr/textAppearanceLarge" />
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textColor="@color/white" />
 
                 <EditText
                     android:id="@+id/AddressBox"
@@ -96,7 +83,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:ems="10"
-                    android:inputType="textPostalAddress" />
+                    android:inputType="textPostalAddress"
+                    android:textColor="@color/white" />
 
             </TableRow>
 
@@ -109,7 +97,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/city"
-                    android:textAppearance="?android:attr/textAppearanceLarge" />
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textColor="@color/white" />
 
                 <EditText
                     android:id="@+id/CityBox"
@@ -117,7 +106,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:ems="10" />
+                    android:ems="10"
+                    android:textColor="@color/white" />
             </TableRow>
 
             <TableRow
@@ -129,7 +119,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/state"
-                    android:textAppearance="?android:attr/textAppearanceLarge" />
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textColor="@color/white" />
 
                 <EditText
                     android:id="@+id/StateBox"
@@ -137,7 +128,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:ems="10" />
+                    android:ems="10"
+                    android:textColor="@color/white" />
             </TableRow>
 
             <TableRow
@@ -149,15 +141,17 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/zip"
-                    android:textAppearance="?android:attr/textAppearanceLarge" />
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textColor="@color/white" />
 
                 <EditText
-                    android:id="@+id/editText3"
+                    android:id="@+id/ZipBox"
                     style="@style/EditTextCubScoutTheme"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:ems="10" />
+                    android:ems="10"
+                    android:textColor="@color/white" />
             </TableRow>
 
             <TableRow
@@ -170,7 +164,8 @@
                     android:layout_height="wrap_content"
                     android:layout_column="0"
                     android:text="@string/phone"
-                    android:textAppearance="?android:attr/textAppearanceLarge" />
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textColor="@color/white" />
 
                 <EditText
                     android:id="@+id/PnumberBox"
@@ -179,7 +174,8 @@
                     android:layout_height="wrap_content"
                     android:layout_column="1"
                     android:ems="10"
-                    android:inputType="phone" />
+                    android:inputType="phone"
+                    android:textColor="@color/white" />
             </TableRow>
 
             <TableRow
@@ -192,7 +188,8 @@
                     android:layout_height="wrap_content"
                     android:layout_column="0"
                     android:text="@string/email"
-                    android:textAppearance="?android:attr/textAppearanceLarge" />
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textColor="@color/white" />
 
                 <EditText
                     android:id="@+id/EmailBox"
@@ -201,7 +198,8 @@
                     android:layout_height="wrap_content"
                     android:layout_column="1"
                     android:ems="10"
-                    android:inputType="textEmailAddress" />
+                    android:inputType="textEmailAddress"
+                    android:textColor="@color/white" />
             </TableRow>
 
         </TableLayout>
@@ -209,18 +207,20 @@
 
         <RelativeLayout
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="fill_parent">
 
             <Button
                 android:id="@+id/BackButton"
                 style="@style/ButtonCubScoutTheme"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentLeft="true"
                 android:layout_gravity="left"
                 android:clickable="true"
-                android:text="@string/back" />
+                android:text="@string/back"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:onClick="ToProducts"/>
 
             <Button
                 android:id="@+id/NextButton"
@@ -231,7 +231,8 @@
                 android:layout_alignParentRight="true"
                 android:layout_gravity="bottom|right"
                 android:clickable="true"
-                android:text="@string/next" />
+                android:text="@string/next"
+                android:onClick="ToFinalize"/>
         </RelativeLayout>
 
     </LinearLayout>
