--- a/PopcornApp/app/src/main/res/values/colors_cubscouttheme.xml
+++ b/PopcornApp/app/src/main/res/values/colors_cubscouttheme.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="cubscouttheme_color">#ffbb33</color>
     <color name="blue">#87cefa</color>
+    <color name="white">#ffffff</color>
 </resources>
