Setting some colors
For the background call android:background="@color/BGColor"

For Text color call android:textColor="@color/TextColor"

--- a/PopcornApp/app/src/main/res/layout/customer_info.xml
+++ b/PopcornApp/app/src/main/res/layout/customer_info.xml
@@ -27,7 +27,8 @@
                     android:layout_height="wrap_content"
                     android:text="@string/fname"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textColor="@color/cubscouttheme_color" />
+                    android:textColor="@color/white"
+                    android:paddingLeft="15dp" />
 
                 <EditText
                     android:id="@+id/FnameBox"
