--- a/PopcornApp/app/src/main/res/values/colors_cubscouttheme.xml
+++ b/PopcornApp/app/src/main/res/values/colors_cubscouttheme.xml
@@ -3,4 +3,6 @@
     <color name="cubscouttheme_color">#ffbb33</color>
     <color name="blue">#87cefa</color>
     <color name="white">#ffffff</color>
+    <color name="TextColor">#ffffff</color>
+    <color name="BGColor">#87cefa</color>
 </resources>
