--- a/PopcornApp/app/src/main/res/layout/customer_info.xml
+++ b/PopcornApp/app/src/main/res/layout/customer_info.xml
@@ -5,20 +5,22 @@
     android:layout_height="fill_parent"
     tools:context="com.mis478.popcornapp.CustomerInfo"
     style="@style/_CubScoutTheme"
-    android:background="@color/blue">
+    android:background="@color/BGColor">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingTop="20dp"
+        android:paddingRight="10dp">
 
 
         <TableLayout
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content">
 
             <TableRow
-                android:layout_width="wrap_content"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content">
 
                 <TextView
@@ -27,7 +29,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/fname"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textColor="@color/white"
+                    android:textColor="@color/TextColor"
                     android:paddingLeft="15dp" />
 
                 <EditText
@@ -38,7 +40,7 @@
                     android:layout_weight="1"
                     android:ems="10"
                     android:inputType="textPersonName"
-                    android:textColor="@color/white" />
+                    android:textColor="@color/TextColor" />
 
             </TableRow>
 
@@ -52,7 +54,8 @@
                     android:layout_height="wrap_content"
                     android:text="@string/lname"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textColor="@color/white" />
+                    android:textColor="@color/TextColor"
+                    android:paddingLeft="15dp" />
 
                 <EditText
                     android:id="@+id/LnameBox"
@@ -62,7 +65,7 @@
                     android:layout_weight="1"
                     android:ems="10"
                     android:inputType="textPersonName"
-                    android:textColor="@color/white" />
+                    android:textColor="@color/TextColor" />
 
             </TableRow>
 
@@ -76,16 +79,17 @@
                     android:layout_height="wrap_content"
                     android:text="@string/address"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textColor="@color/white" />
+                    android:textColor="@color/TextColor"
+                    android:paddingLeft="15dp" />
 
                 <EditText
                     android:id="@+id/AddressBox"
                     style="@style/EditTextCubScoutTheme"
-                    android:layout_width="wrap_content"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:inputType="textPostalAddress"
-                    android:textColor="@color/white" />
+                    android:textColor="@color/TextColor" />
 
             </TableRow>
 
@@ -99,7 +103,8 @@
                     android:layout_height="wrap_content"
                     android:text="@string/city"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textColor="@color/white" />
+                    android:textColor="@color/TextColor"
+                    android:paddingLeft="15dp" />
 
                 <EditText
                     android:id="@+id/CityBox"
@@ -108,7 +113,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:ems="10"
-                    android:textColor="@color/white" />
+                    android:textColor="@color/TextColor" />
             </TableRow>
 
             <TableRow
@@ -121,7 +126,8 @@
                     android:layout_height="wrap_content"
                     android:text="@string/state"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textColor="@color/white" />
+                    android:textColor="@color/TextColor"
+                    android:paddingLeft="15dp" />
 
                 <EditText
                     android:id="@+id/StateBox"
@@ -130,7 +136,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:ems="10"
-                    android:textColor="@color/white" />
+                    android:textColor="@color/TextColor" />
             </TableRow>
 
             <TableRow
@@ -143,7 +149,8 @@
                     android:layout_height="wrap_content"
                     android:text="@string/zip"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textColor="@color/white" />
+                    android:textColor="@color/TextColor"
+                    android:paddingLeft="15dp" />
 
                 <EditText
                     android:id="@+id/ZipBox"
@@ -152,7 +159,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:ems="10"
-                    android:textColor="@color/white" />
+                    android:textColor="@color/TextColor" />
             </TableRow>
 
             <TableRow
@@ -166,17 +173,17 @@
                     android:layout_column="0"
                     android:text="@string/phone"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textColor="@color/white" />
+                    android:textColor="@color/TextColor"
+                    android:paddingLeft="15dp" />
 
                 <EditText
                     android:id="@+id/PnumberBox"
                     style="@style/EditTextCubScoutTheme"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_column="1"
                     android:ems="10"
                     android:inputType="phone"
-                    android:textColor="@color/white" />
+                    android:textColor="@color/TextColor" />
             </TableRow>
 
             <TableRow
@@ -190,25 +197,24 @@
                     android:layout_column="0"
                     android:text="@string/email"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textColor="@color/white" />
+                    android:textColor="@color/TextColor"
+                    android:paddingLeft="15dp" />
 
                 <EditText
                     android:id="@+id/EmailBox"
                     style="@style/EditTextCubScoutTheme"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_column="1"
                     android:ems="10"
                     android:inputType="textEmailAddress"
-                    android:textColor="@color/white" />
+                    android:textColor="@color/TextColor" />
             </TableRow>
 
         </TableLayout>
 
-
         <RelativeLayout
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
             <Button
                 android:id="@+id/BackButton"
@@ -235,6 +241,7 @@
                 android:text="@string/next"
                 android:onClick="ToFinalize"/>
         </RelativeLayout>
+
 
     </LinearLayout>
 </ScrollView>
