--- a/PopcornApp/app/src/main/res/layout/activity_login.xml
+++ b/PopcornApp/app/src/main/res/layout/activity_login.xml
@@ -1,56 +1,60 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/BGColor"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
-    android:background="@color/BGColor">
+    tools:context=".MainActivity">
 
     <EditText
+        android:id="@+id/LoginUsername"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="text"
-        android:ems="10"
-        android:id="@+id/LoginUsername"
-        android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:ems="10"
         android:hint="Username"
-        android:nextFocusForward="@+id/LoginPassword"
-        android:textColor="@color/TextColor"/>
+        android:inputType="text"
+        android:textColor="@color/TextColor"
+        android:nextFocusRight="@+id/LoginPassword"/>
 
     <Button
+        android:id="@+id/LoginSubmitButton"
+        style="@style/ButtonCubScoutTheme"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Submit"
-        android:id="@+id/button"
-        android:onClick="sendMessage"
         android:layout_below="@id/LoginPassword"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="53dp"
-        style="@style/ButtonCubScoutTheme"
-        android:textColor="@color/TextColor"/>
+        android:onClick="Login"
+        android:text="Submit"
+        android:textColor="@color/TextColor" />
 
     <EditText
+        android:id="@+id/LoginPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="text"
-        android:ems="10"
-        android:id="@+id/LoginPassword"
-        android:hint="Password"
         android:layout_below="@id/LoginUsername"
         android:layout_centerHorizontal="true"
+        android:ems="10"
+        android:hint="Password"
+        android:inputType="text"
         android:password="true"
-        android:textColor="@color/TextColor"/>
+        android:textColor="@color/TextColor"
+        android:nextFocusRight="@+id/LoginSubmitButton"/>
 
     <TextView
+        android:id="@+id/WelcomeBanner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Welcome to the Cub Scout App(test/123 or leader/123)"
-        android:id="@+id/WelcomeBanner"
-        android:layout_marginTop="71dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:textColor="@color/TextColor"/>
+        android:layout_marginTop="71dp"
+        android:text="Welcome to the Cub Scout App(test/123 or leader/123)"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@color/TextColor" />
 
 </RelativeLayout>
