Login Tab Order / Customer Info Page
Trying to improve the look of the Customer Info page.  There is a bug
that crashes the program when you hit next on Customer Info.
Troubleshooting tonight.

--- a/PopcornApp/app/src/main/res/layout/activity_login.xml
+++ b/PopcornApp/app/src/main/res/layout/activity_login.xml
@@ -44,7 +44,7 @@
         android:inputType="text"
         android:password="true"
         android:textColor="@color/TextColor"
-        android:nextFocusRight="@+id/LoginSubmitButton"/>
+        android:nextFocusRight="@+id/LoginPassword"/>
 
     <TextView
         android:id="@+id/WelcomeBanner"
