--- a/PopcornApp/app/src/main/res/layout/customer_info.xml
+++ b/PopcornApp/app/src/main/res/layout/customer_info.xml
@@ -1,18 +1,18 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/scrollView"
+    style="@style/_CubScoutTheme"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    tools:context="com.mis478.popcornapp.CustomerInfo"
-    style="@style/_CubScoutTheme"
-    android:background="@color/BGColor">
+    android:background="@color/BGColor"
+    tools:context="com.mis478.popcornapp.CustomerInfo">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:paddingTop="20dp"
-        android:paddingRight="10dp">
+        android:paddingRight="10dp"
+        android:paddingTop="20dp">
 
 
         <TableLayout
@@ -27,10 +27,10 @@
                     android:id="@+id/FnameLabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:paddingLeft="15dp"
                     android:text="@string/fname"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textColor="@color/TextColor"
-                    android:paddingLeft="15dp" />
+                    android:textColor="@color/TextColor" />
 
                 <EditText
                     android:id="@+id/FnameBox"
@@ -39,10 +39,10 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:ems="10"
-                    android:inputType="textPersonName"
-                    android:textColor="@color/TextColor"
+                    android:inputType="textCapWords|textPersonName"
                     android:nextFocusDown="@+id/LnameBox"
-                    android:nextFocusRight="@id/LnameBox"/>
+                    android:nextFocusRight="@id/LnameBox"
+                    android:textColor="@color/TextColor" />
 
             </TableRow>
 
@@ -54,10 +54,10 @@
                     android:id="@+id/LnameLabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:paddingLeft="15dp"
                     android:text="@string/lname"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textColor="@color/TextColor"
-                    android:paddingLeft="15dp" />
+                    android:textColor="@color/TextColor" />
 
                 <EditText
                     android:id="@+id/LnameBox"
@@ -66,10 +66,35 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:ems="10"
-                    android:inputType="textPersonName"
+                    android:inputType="textCapWords|textPersonName"
+                    android:nextFocusRight="@+id/StreetNumberBox"
+                    android:textColor="@color/TextColor" />
+
+            </TableRow>
+
+            <TableRow
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/StreetNumberLabel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="15dp"
+                    android:text="@string/streetNumber"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textColor="@color/TextColor" />
+
+                <EditText
+                    android:id="@+id/StreetNumberBox"
+                    style="@style/EditTextCubScoutTheme"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:inputType="number"
+                    android:nextFocusRight="@+id/StreetNameBox"
                     android:textColor="@color/TextColor"
-                    android:nextFocusDown="@+id/AddressBox"
-                    android:nextFocusRight="@id/AddressBox"/>
+                    android:maxLength="10" />
 
             </TableRow>
 
@@ -81,21 +106,20 @@
                     android:id="@+id/AddressLabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/address"
+                    android:paddingLeft="15dp"
+                    android:text="@string/streetName"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textColor="@color/TextColor"
-                    android:paddingLeft="15dp" />
+                    android:textColor="@color/TextColor" />
 
                 <EditText
-                    android:id="@+id/AddressBox"
+                    android:id="@+id/StreetNameBox"
                     style="@style/EditTextCubScoutTheme"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:inputType="textPostalAddress"
-                    android:textColor="@color/TextColor"
-                    android:nextFocusDown="@+id/CityBox"
-                    android:nextFocusRight="@id/CityBox"/>
+                    android:nextFocusRight="@id/CityBox"
+                    android:textColor="@color/TextColor" />
 
             </TableRow>
 
@@ -107,10 +131,10 @@
                     android:id="@+id/CityLabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:paddingLeft="15dp"
                     android:text="@string/city"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textColor="@color/TextColor"
-                    android:paddingLeft="15dp" />
+                    android:textColor="@color/TextColor" />
 
                 <EditText
                     android:id="@+id/CityBox"
@@ -119,9 +143,9 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:ems="10"
-                    android:textColor="@color/TextColor"
                     android:nextFocusDown="@+id/StateBox"
-                    android:nextFocusRight="@id/StateBox"/>
+                    android:nextFocusRight="@id/StateBox"
+                    android:textColor="@color/TextColor" />
             </TableRow>
 
             <TableRow
@@ -132,21 +156,16 @@
                     android:id="@+id/StateLabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:paddingLeft="15dp"
                     android:text="@string/state"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textColor="@color/TextColor"
-                    android:paddingLeft="15dp" />
+                    android:textColor="@color/TextColor" />
 
-                <EditText
-                    android:id="@+id/StateBox"
-                    style="@style/EditTextCubScoutTheme"
-                    android:layout_width="wrap_content"
+                <Spinner
+                    android:layout_width="30dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:ems="10"
-                    android:textColor="@color/TextColor"
-                    android:nextFocusDown="@+id/ZipBox"
-                    android:nextFocusRight="@id/ZipBox"/>
+                    android:id="@+id/StateSpinner"
+                    style="@style/SpinnerCubScoutTheme"/>
             </TableRow>
 
             <TableRow
@@ -157,10 +176,10 @@
                     android:id="@+id/ZipLabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:paddingLeft="15dp"
                     android:text="@string/zip"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textColor="@color/TextColor"
-                    android:paddingLeft="15dp" />
+                    android:textColor="@color/TextColor" />
 
                 <EditText
                     android:id="@+id/ZipBox"
@@ -169,9 +188,10 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:ems="10"
-                    android:textColor="@color/TextColor"
                     android:nextFocusDown="@+id/PnumberBox"
-                    android:nextFocusRight="@id/PnumberBox"/>
+                    android:nextFocusRight="@id/PnumberBox"
+                    android:textColor="@color/TextColor"
+                    android:inputType="number" />
             </TableRow>
 
             <TableRow
@@ -183,10 +203,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_column="0"
+                    android:paddingLeft="15dp"
                     android:text="@string/phone"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textColor="@color/TextColor"
-                    android:paddingLeft="15dp" />
+                    android:textColor="@color/TextColor" />
 
                 <EditText
                     android:id="@+id/PnumberBox"
@@ -195,9 +215,9 @@
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:inputType="phone"
-                    android:textColor="@color/TextColor"
                     android:nextFocusDown="@+id/EmailBox"
-                    android:nextFocusRight="@id/EmailBox"/>
+                    android:nextFocusRight="@id/EmailBox"
+                    android:textColor="@color/TextColor" />
             </TableRow>
 
             <TableRow
@@ -209,10 +229,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_column="0"
+                    android:paddingLeft="15dp"
                     android:text="@string/email"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textColor="@color/TextColor"
-                    android:paddingLeft="15dp" />
+                    android:textColor="@color/TextColor" />
 
                 <EditText
                     android:id="@+id/EmailBox"
@@ -221,9 +241,9 @@
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:inputType="textEmailAddress"
-                    android:textColor="@color/TextColor"
                     android:nextFocusDown="@+id/NextButton"
-                    android:nextFocusRight="@id/NextButton"/>
+                    android:nextFocusRight="@id/NextButton"
+                    android:textColor="@color/TextColor" />
             </TableRow>
 
         </TableLayout>
@@ -237,13 +257,13 @@
                 style="@style/ButtonCubScoutTheme"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="left"
-                android:clickable="true"
-                android:text="@string/back"
-                android:layout_alignParentTop="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
-                android:onClick="ToProducts"/>
+                android:layout_alignParentTop="true"
+                android:layout_gravity="left"
+                android:clickable="true"
+                android:onClick="ToProducts"
+                android:text="@string/back" />
 
             <Button
                 android:id="@+id/NextButton"
@@ -254,8 +274,8 @@
                 android:layout_alignParentRight="true"
                 android:layout_gravity="bottom|right"
                 android:clickable="true"
-                android:text="@string/next"
-                android:onClick="ToFinalize"/>
+                android:onClick="ToFinalize"
+                android:text="@string/next" />
         </RelativeLayout>
 
 
