--- a/PopcornApp/app/src/main/res/layout/customer_info.xml
+++ b/PopcornApp/app/src/main/res/layout/customer_info.xml
@@ -42,7 +42,8 @@
                     android:inputType="textCapWords|textPersonName"
                     android:nextFocusDown="@+id/LnameBox"
                     android:nextFocusRight="@id/LnameBox"
-                    android:textColor="@color/TextColor" />
+                    android:textColor="@color/TextColor"
+                    android:maxLength="15"/>
 
             </TableRow>
 
@@ -68,7 +69,8 @@
                     android:ems="10"
                     android:inputType="textCapWords|textPersonName"
                     android:nextFocusRight="@+id/StreetNumberBox"
-                    android:textColor="@color/TextColor" />
+                    android:textColor="@color/TextColor"
+                    android:maxLength="15"/>
 
             </TableRow>
 
@@ -94,7 +96,7 @@
                     android:inputType="number"
                     android:nextFocusRight="@+id/StreetNameBox"
                     android:textColor="@color/TextColor"
-                    android:maxLength="10" />
+                    android:maxLength="7" />
 
             </TableRow>
 
@@ -119,7 +121,8 @@
                     android:ems="10"
                     android:inputType="textPostalAddress"
                     android:nextFocusRight="@id/CityBox"
-                    android:textColor="@color/TextColor" />
+                    android:textColor="@color/TextColor"
+                    android:maxLength="15"/>
 
             </TableRow>
 
@@ -145,7 +148,8 @@
                     android:ems="10"
                     android:nextFocusDown="@+id/StateBox"
                     android:nextFocusRight="@id/StateBox"
-                    android:textColor="@color/TextColor" />
+                    android:textColor="@color/TextColor"
+                    android:maxLength="15"/>
             </TableRow>
 
             <TableRow
@@ -165,7 +169,9 @@
                     android:layout_width="30dp"
                     android:layout_height="wrap_content"
                     android:id="@+id/StateSpinner"
-                    style="@style/SpinnerCubScoutTheme"/>
+                    style="@style/SpinnerCubScoutTheme"
+                    android:spinnerMode="dialog"
+                    android:touchscreenBlocksFocus="false" />
             </TableRow>
 
             <TableRow
@@ -191,7 +197,8 @@
                     android:nextFocusDown="@+id/PnumberBox"
                     android:nextFocusRight="@id/PnumberBox"
                     android:textColor="@color/TextColor"
-                    android:inputType="number" />
+                    android:inputType="number"
+                    android:maxLength="5"/>
             </TableRow>
 
             <TableRow
@@ -217,7 +224,8 @@
                     android:inputType="phone"
                     android:nextFocusDown="@+id/EmailBox"
                     android:nextFocusRight="@id/EmailBox"
-                    android:textColor="@color/TextColor" />
+                    android:textColor="@color/TextColor"
+                    android:maxLength="10"/>
             </TableRow>
 
             <TableRow
@@ -243,7 +251,8 @@
                     android:inputType="textEmailAddress"
                     android:nextFocusDown="@+id/NextButton"
                     android:nextFocusRight="@id/NextButton"
-                    android:textColor="@color/TextColor" />
+                    android:textColor="@color/TextColor"
+                    android:maxLength="30"/>
             </TableRow>
 
         </TableLayout>
