--- a/PopcornApp/app/src/main/res/values/styles_cubscouttheme.xml
+++ b/PopcornApp/app/src/main/res/values/styles_cubscouttheme.xml
@@ -5,13 +5,13 @@
 
   <style name="EditTextCubScoutTheme" parent="android:Widget.EditText">
 	  <item name="android:background">@drawable/cubscouttheme_edit_text_holo_light</item>
-	  <item name="android:textColor">#000000</item>
+	  <item name="android:textColor">#ffffff</item>
   </style>
 
   <style name="AutoCompleteTextViewCubScoutTheme" parent="android:Widget.AutoCompleteTextView">
       <item name="android:dropDownSelector">@drawable/cubscouttheme_list_selector_holo_light</item>
 	  <item name="android:background">@drawable/cubscouttheme_edit_text_holo_light</item>
-	  <item name="android:textColor">#000000</item>
+	  <item name="android:textColor">#ffffff</item>
   </style>
 
   <style name="CheckBoxCubScoutTheme" parent="android:Widget.CompoundButton.CheckBox">
@@ -36,10 +36,12 @@
   <style name="SpinnerCubScoutTheme" parent="android:Widget.Spinner">
       <item name="android:background">@drawable/cubscouttheme_spinner_background_holo_light</item>
       <item name="android:dropDownSelector">@drawable/cubscouttheme_list_selector_holo_light</item>
+      <item name="android:textColor">#ffffff</item>
   </style>
 
   <style name="SpinnerDropDownItemCubScoutTheme" parent="android:Widget.DropDownItem.Spinner">
       <item name="android:checkMark">@drawable/cubscouttheme_btn_radio_holo_light</item>
+      <item name="android:textColor">#ffffff</item>
   </style>
   <style name="TabCubScoutTheme">
       <item name="android:gravity">center_horizontal</item>
@@ -94,7 +96,7 @@
   </style>
 
   <style name="SpinnerItemCubScoutTheme" parent="android:TextAppearance.Widget.TextView.SpinnerItem">
-      <item name="android:textColor">#000000</item>
+      <item name="android:textColor">#FFFFFF</item>
   </style>
 
 </resources>
